--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NODE_ENV=localhost
-VUE_APP_API_URL=http://localhost:8080/
+# VUE_APP_API_URL=http://localhost:8080/
+# VUE_APP_API_URL=http://localhost/
+VUE_APP_API_URL=http://10.100.124.9/
 # VUE_APP_API_URL=http://localhost:55000/
